--- a/client/src/app/components/paginas/users/users.component.html
+++ b/client/src/app/components/paginas/users/users.component.html
@@ -26,7 +26,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let user of lista_users">
+        <tr *ngFor="let user of lista_users | paginate: { itemsPerPage: itemsPerPage, currentPage: page } ">
           <td class="align-middle">{{ user.nome_completo }}</td>
           <td class="align-middle text-center">{{ user.user_email }}</td>
           <td class="align-middle text-center">{{ user.ass_user_sexec.sigla }}</td>
@@ -36,6 +36,7 @@
         </tr>
       </tbody>
     </table>
+    <pagination-controls class="text-center" (pageChange)="page = $event"></pagination-controls>
   </div>
 
 </section>
