--- a/client/src/app/components/paginas/consulta-evento/consulta-evento.component.html
+++ b/client/src/app/components/paginas/consulta-evento/consulta-evento.component.html
@@ -8,7 +8,7 @@
 
     <div class="row">
 
-      <div class="form-floating col-sm-10 col-12 mt-3 mb-2">
+      <div class="form-floating col-sm-6 col-12 mt-3 mb-2">
         <select name="sexec_id" id="sexec_id" class="form-select" [(ngModel)]="filtro_resp" #sexec_id (change)="(getEventoByRes(sexec_id.value))">
           <option *ngFor=" let sexec of lista_sexec" [value]=sexec.id> {{ sexec.secretaria }} / {{ sexec.sigla }} </option>
         </select>
@@ -18,7 +18,9 @@
       <div class="form-floating col-sm-2 col-12 mt-3 mb-2">
         <div class="filter-nav d-flex flex-center">
           <button class="mx-3 mt-1 pt-1 pb-1 btn btn-primary text-uppercase fw-bold" (click)="getEventos()">Lista de Eventos</button>
-          <button class="mx-3 btn text-center btn-success text-uppercase fw-bold" data-bs-toggle="modal" data-bs-target="#modalTabela">Ver Tabela</button>
+          <button class="mx-3 btn text-center btn-warning text-uppercase fw-bold" data-bs-toggle="modal" data-bs-target="#modalTabelaEventoAcompanhamento">Evento Completo</button>
+          <button class="mx-3 btn text-center btn-success text-uppercase fw-bold" data-bs-toggle="modal" data-bs-target="#modalTabelaEvento">Tabela Evento</button>
+          <button class="mx-3 btn text-center btn-info text-uppercase fw-bold" data-bs-toggle="modal" data-bs-target="#modalEventoFiltro">Tabela com Filtro</button>
         </div>
       </div>
     </div>
@@ -265,18 +267,18 @@
   </div>
 </div>
 
-<!-- Modal Tabela-->
-<div class="modal fade" id="modalTabela" tabindex="-1" aria-labelledby="modalTabelaLabel" aria-hidden="true">
+<!-- Modal Tabela Evento com Acompanhanhamento-->
+<div class="modal fade" id="modalTabelaEventoAcompanhamento" tabindex="-1" aria-labelledby="modalTabelaEventoAcompanhamentoLabel" aria-hidden="true">
   <div class="modal-dialog modal-xl modal-dialog-scrollable mt-5">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="modalTabelaLabel">Eventos</h1>
+        <h1 class="modal-title fs-5" id="modalTabelaEventoAcompanhamentoLabel">Eventos</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body container">
 
         <div>
-          <table class="table table-striped table-hover" id="table-evento">
+          <table class="table table-striped table-hover" id="table-evento-acompanhamento">
           <thead>
             <tr>
               <th scope="col" colspan="14" class="align-middle text-center table-primary text-uppercase">Evento</th>
@@ -333,6 +335,132 @@
       <div class="modal-footer">
         <button type="button" id="cancel" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <button type="button" (click)="getReport()" class="btn btn-warning">Exportar Planilha</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Tabela Evento-->
+<div class="modal fade" id="modalTabelaEvento" tabindex="-1" aria-labelledby="modalTabelaEventoLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-dialog-scrollable mt-5">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="modalTabelaEventoLabel">Eventos</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body container">
+
+        <div>
+          <table class="table table-striped table-hover" id="table-evento">
+          <thead>
+            <tr>
+              <th scope="col" colspan="14" class="align-middle text-center table-primary text-uppercase">Evento</th>
+            </tr>
+            <tr>
+              <th scope="col" class="align-middle text-center">Mês</th>
+              <th scope="col" class="align-middle text-center">Ano</th>
+              <th scope="col" class="align-middle text-center">Tipo Evento</th>
+              <th scope="col" class="align-middle text-center">Responsável</th>
+              <th scope="col" class="align-middle text-center">Nome Evento</th>
+              <th scope="col" class="align-middle text-center">Descrição</th>
+              <th scope="col" class="align-middle text-center">Publico Alvo</th>
+              <th scope="col" class="align-middle text-center">Tipo Local</th>
+              <th scope="col" class="align-middle text-center">Local</th>
+              <th scope="col" class="align-middle text-center">Periodo</th>
+              <th scope="col" class="align-middle text-center">Custo Prévio</th>
+              <th scope="col" class="align-middle text-center">Fonte recursos</th>
+              <th scope="col" class="align-middle text-center">Participação</th>
+              <th scope="col" class="align-middle text-center">Leads Previous</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let evento of lista_evento">
+              <td class="align-middle text-center">{{ evento.mes }}</td>
+              <td class="align-middle text-center">{{ evento.ano }}</td>
+              <td class="align-middle text-center">{{ evento.ass_evento_tipo.nome_evento }}</td>
+              <td class="align-middle">{{ evento.ass_evento_sexec.secretaria }} - {{ evento.ass_evento_sexec.sigla }}</td>
+              <td class="align-middle">{{ evento.nome_evento }}</td>
+              <td class="align-middle">{{ evento.descricao }}</td>
+              <td class="align-middle text-center">{{ evento.publico_alvo }}</td>
+              <td class="align-middle text-center">{{ evento.ass_evento_local.local_evento }}</td>
+              <td class="align-middle text-center">{{ evento.local }}</td>
+              <td class="align-middle text-center">{{ evento.periodo }}</td>
+              <td class="align-middle text-center">R$ {{ evento.custo_previo }}</td>
+              <td class="align-middle text-center">{{ evento.ass_evento_recursos.recursos }}</td>
+              <td class="align-middle text-center">{{ evento.ass_evento_participacao.participacao }}</td>
+              <td class="align-middle text-center">{{ evento.lead_previsto }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="cancel" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" (click)="getReportEvent()" class="btn btn-warning">Exportar Planilha</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Tabela Evento com Filtro-->
+<div class="modal fade" id="modalEventoFiltro" tabindex="-1" aria-labelledby="modalEventoFiltroLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-dialog-scrollable mt-5">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="modalEventoFiltroLabel">Eventos</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body container">
+
+        <div>
+          <table class="table table-striped table-hover" id="table-evento-filtro">
+          <thead>
+            <tr>
+              <th scope="col" colspan="14" class="align-middle text-center table-primary text-uppercase">Evento</th>
+            </tr>
+            <tr>
+              <th scope="col" class="align-middle text-center">Mês</th>
+              <th scope="col" class="align-middle text-center">Ano</th>
+              <th scope="col" class="align-middle text-center">Tipo Evento</th>
+              <th scope="col" class="align-middle text-center">Responsável</th>
+              <th scope="col" class="align-middle text-center">Nome Evento</th>
+              <th scope="col" class="align-middle text-center">Descrição</th>
+              <th scope="col" class="align-middle text-center">Publico Alvo</th>
+              <th scope="col" class="align-middle text-center">Tipo Local</th>
+              <th scope="col" class="align-middle text-center">Local</th>
+              <th scope="col" class="align-middle text-center">Periodo</th>
+              <th scope="col" class="align-middle text-center">Custo Prévio</th>
+              <th scope="col" class="align-middle text-center">Fonte recursos</th>
+              <th scope="col" class="align-middle text-center">Participação</th>
+              <th scope="col" class="align-middle text-center">Leads Previous</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let evento of eventosFiltrados">
+              <td class="align-middle text-center">{{ evento.mes }}</td>
+              <td class="align-middle text-center">{{ evento.ano }}</td>
+              <td class="align-middle text-center">{{ evento.nome_evento }}</td>
+              <td class="align-middle">{{ evento.ass_evento_sexec.secretaria }} - {{ evento.ass_evento_sexec.sigla }}</td>
+              <td class="align-middle">{{ evento.nome_evento }}</td>
+              <td class="align-middle">{{ evento.descricao }}</td>
+              <td class="align-middle text-center">{{ evento.publico_alvo }}</td>
+              <td class="align-middle text-center">{{ evento.ass_evento_local.local_evento }}</td>
+              <td class="align-middle text-center">{{ evento.local }}</td>
+              <td class="align-middle text-center">{{ evento.periodo }}</td>
+              <td class="align-middle text-center">R$ {{ evento.custo_previo }}</td>
+              <td class="align-middle text-center">{{ evento.ass_evento_recursos.recursos }}</td>
+              <td class="align-middle text-center">{{ evento.ass_evento_participacao.participacao }}</td>
+              <td class="align-middle text-center">{{ evento.lead_previsto }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="cancel" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" (click)="getReportFilter()" class="btn btn-warning">Exportar Planilha</button>
       </div>
     </div>
   </div>
