filtros para acompanhamento

--- a/client/src/app/components/paginas/cadastro-acompanhamento/cadastro-acompanhamento.component.html
+++ b/client/src/app/components/paginas/cadastro-acompanhamento/cadastro-acompanhamento.component.html
@@ -4,7 +4,7 @@
       <div class="col-12">
         <div class="card card_form mt-3">
           <div class="cabecalho">
-            <h3 class="pb-3 pt-3 text-center text-white text-uppercase">Pós Evento</h3>
+            <h3 class="pb-3 pt-3 text-center text-white text-uppercase">Situação do Evento</h3>
           </div>
           <form class="ms-4 me-4" #formFollow="ngForm">
             <fieldset>
