--- a/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
+++ b/client/src/app/components/paginas/consulta-acompanhamento/consulta-acompanhamento.component.html
@@ -17,19 +17,33 @@
     </div> -->
 
     <div class="row mt-3 mb-3 pt-3">
-      <div class="form-floating col-sm-4 col-12 mb-2 mx-auto">
-        <select name="stats" id="stats" class="form-select text-capitalize" #stats (change)="(getFollowStats(stats.value))">
-          <option value="A Iniciar">A Iniciar</option>
-          <option value="Andamento">Andamento</option>
-          <option value="Cancelado">Cancelado</option>
-          <option value="Concluído">Concluído</option>
+      <div class="form-floating col-sm-2 col-12 mb-2 mx-auto">
+        <select name="stats" id="stats" class="form-select text-capitalize" [(ngModel)]="filtro_status" #stats (change)="(getFollowStats(stats.value))">
+          <option *ngFor=" let status of lista_status" [value]=status> {{ status }} </option>
+
         </select>
         <label class="form-label pergunta ms-3" for="cargo">Status dos eventos</label>
+      </div>
+
+      <div class="form-floating col-sm-2 col-12 mb-2 mx-auto">
+        <select name="ano" id="ano" class="form-select" [(ngModel)]="filtro_ano" #ano (change)="(filtroAno(ano.value))">
+          <option *ngFor=" let year of lista_ano" [value]=year> {{year}} </option>
+        </select>
+        <label class="form-label pergunta ms-3" for="cargo">Ano</label>
+      </div>
+
+      <div class="form-floating col-sm-4 col-12 mb-2">
+        <select name="sexec_id" id="sexec_id" class="form-select" [(ngModel)]="filtro_sexec" #sexec_id (change)="(getFollowSexec(sexec_id.value))">
+          <option *ngFor=" let sexec of lista_sexec" [value]=sexec.id> {{ sexec.secretaria }} / {{ sexec.sigla }} </option>
+        </select>
+        <label class="form-label pergunta ms-3" for="cargo">Secretária Executiva</label>
       </div>
 
       <div class="col-sm-4 col-12 mb-2">
         <div class="filter-nav d-flex flex-center">
           <button class="mx-3 mt-1 pt-3 pb-3 btn btn-primary text-uppercase fw-bold" (click)="getFollows()">Lista de Eventos</button>
+          <button class="mx-3 mt-1 pt-1 pb-1 btn btn-info text-white text-uppercase fw-bold" (click)="filtrarEventos()">Filtrar Eventos</button>
+          <button class="mx-3 mt-1 pt-1 pb-1 btn btn-secondary text-uppercase fw-bold" (click)="limparFiltros()">Limpar Filtro</button>
           <!-- <button class="mx-3 btn text-center btn-success text-uppercase fw-bold" (click)="getReport()">Exportar<br>Planilha</button> -->
         </div>
       </div>
@@ -39,6 +53,7 @@
     <table class="table table-striped table-hover" id="table-follow">
       <thead>
         <tr>
+          <th scope="col" class="align-middle text-center">Ano do Evento</th>
           <th scope="col" class="align-middle text-center">Nome Evento</th>
           <th scope="col" class="align-middle text-center">Executiva Responsável</th>
           <th scope="col" class="align-middle text-center">Situação Atual</th>
@@ -50,8 +65,25 @@
           <th scope="col" class="align-middle text-center">Remover</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody *ngIf="!filtrar">
         <tr *ngFor="let follow of lista_follow | paginate: { itemsPerPage: itemsPerPage, currentPage: page }">
+          <td class="align-middle">{{ follow.ass_acompanhamento_evento.ano }}</td>
+          <td class="align-middle">{{ follow.ass_acompanhamento_evento.nome_evento }}</td>
+          <td class="align-middle">{{ follow.ass_acompanhamento_evento.ass_evento_sexec.secretaria }}</td>
+          <td class="align-middle">{{ follow.situacao_atual }}</td>
+          <td class="align-middle">{{ follow.resultado }}</td>
+          <td class="align-middle">R$ {{ follow.custo_realizado }}</td>
+          <td class="align-middle">{{ follow.leads_realizados }}</td>
+          <td *ngIf="profile_id === 3 || profile_id === 2" class="align-middle"><button title="Inserir Imagens" (click)="onEdit(follow)" type="button" class="btn btn-primary mx-3" data-bs-toggle="modal" data-bs-target="#modalInsertImg"><i class="bi bi-image"></i></button></td>
+          <td *ngIf="profile_id === 3 || profile_id === 2" class="align-middle"><button title="Visualizar evento" (click)="viewImg(follow)" type="button" class="btn btn-success mx-3" data-bs-toggle="modal" data-bs-target="#modalViewImg"><i class="bi bi-eye-fill"></i></button></td>
+          <td *ngIf="profile_id === 3 || profile_id === 2" class="align-middle"><button (click)="onEdit(follow)" type="button" class="btn btn-warning mx-3" data-bs-toggle="modal" data-bs-target="#modalEdit"><i class="bi bi-pencil-square"></i></button></td>
+          <td *ngIf="profile_id === 3 || profile_id === 2" class="align-middle"><button (click)="deletaFollow(follow)" type="button" class="btn btn-danger mx-3"><i class="bi bi-trash-fill"></i></button></td>
+        </tr>
+      </tbody>
+
+      <tbody *ngIf="filtrar">
+        <tr *ngFor="let follow of eventosFiltrados | paginate: { itemsPerPage: itemsPerPage, currentPage: page }">
+          <td class="align-middle">{{ follow.ass_acompanhamento_evento.ano }}</td>
           <td class="align-middle">{{ follow.ass_acompanhamento_evento.nome_evento }}</td>
           <td class="align-middle">{{ follow.ass_acompanhamento_evento.ass_evento_sexec.secretaria }}</td>
           <td class="align-middle">{{ follow.situacao_atual }}</td>
